--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
       crossorigin
     ></script>
@@ -38,6 +38,6 @@
     <script
       src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin
-    ></script>
+    ></script> -->
   </body>
 </html>
